--- a/buienalarm.yaml
+++ b/buienalarm.yaml
@@ -13,7 +13,7 @@ wifi:
   password: !secret wifi_password
 
 ota:
-  safe_mode: true
+  platform: esphome
   password: !secret ota_password
 
 mqtt:
@@ -58,6 +58,7 @@ globals:
 http_request:
   useragent: esphome/device
   timeout: 10s
+  verify_ssl: false
 
 time:
   - platform: sntp
