--- a/geiger.yaml
+++ b/geiger.yaml
@@ -14,19 +14,12 @@ wifi:
   password: !secret wifi_password
 
 ota:
-  safe_mode: true
+  platform: esphome
   password: !secret ota_password
 
 mqtt:
   broker: mqtt.local
 
-
-external_components:
-  - source:
-      type: git
-      url: https://github.com/esphome/esphome
-      ref: dev
-    components: [ mpr121 ] # upstream in 2024.6
 
 i2c:
   sda: 26
