--- a/snuffelaar.yaml
+++ b/snuffelaar.yaml
@@ -60,6 +60,15 @@ sensor:
       name: "MH-Z19 CO2 Value"
       state_topic: sensors/${name}/co2
       retain: false
+      on_value_range:
+        - below: ${co2_alarm_off}
+          then:
+            - light.turn_off: led
+        - above: ${co2_alarm_on}
+          then:
+            - light.turn_on:
+                id: led
+                effect: Slow Pulse
     update_interval: 10s
     automatic_baseline_calibration: true
 
@@ -124,6 +133,7 @@ sensor:
 
 light:
   - platform: esp32_rmt_led_strip
+    id: led
     rgb_order: GRB
     is_rgbw: true
     pin: 26
@@ -131,3 +141,17 @@ light:
     rmt_channel: 0
     chipset: SK6812
     name: "Led"
+    effects:
+      - pulse:
+          name: "Slow Pulse"
+          transition_length: 2s
+          update_interval: 2s
+          min_brightness: 0%
+          max_brightness: 100%
+
+switch:
+  - platform: gpio
+    pin:
+      number: 15
+      mode: INPUT_PULLUP
+    name: "Button"
