lg-therma: template climate control

--- a/lg-therma.yaml
+++ b/lg-therma.yaml
@@ -17,6 +17,10 @@ esp32:
   framework:
     type: arduino
 
+external_components:
+  - source: github://polyfloyd/esphome@template-climate
+    components: [ template ]
+
 
 logger:
 
@@ -55,7 +59,7 @@ modbus_controller:
 
 switch:
   - platform: modbus_controller
-    name: "Active"
+    id: lg_therma_active
     icon: mdi:power
     modbus_controller_id: lg
     register_type: coil
@@ -105,7 +109,7 @@ switch:
                   value: 26
 
   - platform: modbus_controller
-    name: "Silent Mode"
+    id: lg_therma_silent_mode
     icon: mdi:volume-off
     modbus_controller_id: lg
     register_type: coil
@@ -114,7 +118,7 @@ switch:
 binary_sensor:
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Low Flow"
+    name: "LG-Therma Low Flow"
     icon: mdi:pump-off
     register_type: discrete_input
     address: 0
@@ -122,56 +126,68 @@ binary_sensor:
   - platform: modbus_controller
     modbus_controller_id: lg
     id: pump_running
-    name: "Pump Running"
+    name: "LG-Therma Pump Running"
     icon: mdi:pump
     register_type: discrete_input
     address: 1
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Compressor Running"
+    name: "LG-Therma Compressor Running"
     icon: mdi:car-turbocharger
     register_type: discrete_input
     address: 3
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Defrosting"
+    name: "LG-Therma Defrosting"
     icon: mdi:snowflake-melt
     register_type: discrete_input
     address: 4
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Silent Mode On"
+    name: "LG-Therma Silent Mode On"
     icon: mdi:volume-off
     register_type: discrete_input
     address: 7
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Error"
+    name: "LG-Therma Error"
     icon: mdi:alert-outline
     register_type: discrete_input
     address: 13
 
 text_sensor:
   - platform: version
-    name: "ESPHome Version"
+    name: "LG-Therma ESPHome Version"
     hide_timestamp: true
     state_topic: esphome/lg-therma/version
 
   - platform: template
-    id: lg_therma_action
-    name: "Action"
+    id: climate_action
     icon: mdi:sun-snowflake-variant
 
 sensor:
   - platform: wifi_signal
-    name: "WiFi Signal dB"
+    name: "LG-Therma WiFi Signal dB"
     update_interval: 10s
     state_topic: esphome/lg-therma/wifi_signal
     retain: false
+
+  - platform: template
+    id: climate_current_temperature
+    lambda: !lambda |-
+      if (id(reference).state == "Water Inlet") {
+        return id(inlet_temp).state;
+      } else if (id(reference).state == "Water Outlet") {
+        return id(outlet_temp).state;
+      }
+      if (id(ext_temperature).state > 0) {
+        return id(ext_temperature).state;
+      }
+      return id(int_temperature).state;
 
   - platform: modbus_controller
     modbus_controller_id: lg
@@ -183,17 +199,18 @@ sensor:
     value_type: U_WORD
     on_value:
       - text_sensor.template.publish:
-          id: lg_therma_action
+          id: climate_action
           state: !lambda |-
-            return x == 0 ? "Off"
-                 : x == 1 ? "Cool"
-                 : x == 2 ? "Heat"
+            return x == 1 ? "COOLING"
+                 : x == 2 ? "HEATING"
+                 : (x == 0 && id(lg_therma_active).state) ? "IDLE"
+                 : (x == 0 && !id(lg_therma_active).state) ? "OFF"
                  : "???";
 
   - platform: modbus_controller
     modbus_controller_id: lg
     id: inlet_temp
-    name: "Water Inlet"
+    name: "LG-Therma Water Inlet"
     icon: mdi:thermometer-chevron-down
     register_type: read
     address: 2
@@ -209,7 +226,7 @@ sensor:
   - platform: modbus_controller
     modbus_controller_id: lg
     id: outlet_temp
-    name: "Water Outlet"
+    name: "LG-Therma Water Outlet"
     icon: mdi:thermometer-chevron-up
     register_type: read
     address: 3
@@ -228,7 +245,8 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Room Air Temperature"
+    id: int_temperature
+    name: "LG-Therma Room Air Temperature"
     register_type: read
     address: 7
     register_count: 2
@@ -243,7 +261,7 @@ sensor:
   - platform: modbus_controller
     modbus_controller_id: lg
     id: flow_rate
-    name: "Flow Rate"
+    name: "LG-Therma Flow Rate"
     icon: mdi:waves-arrow-right
     register_type: read
     address: 8
@@ -264,7 +282,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Air Ingress Temperature"
+    name: "LG-Therma Air Ingress Temperature"
     register_type: read
     address: 12
     register_count: 2
@@ -282,7 +300,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Refridgerant Cool"
+    name: "LG-Therma Refridgerant Cool"
     icon: mdi:thermometer-minus
     register_type: read
     address: 18
@@ -297,7 +315,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Refridgerant Hot"
+    name: "LG-Therma Refridgerant Hot"
     icon: mdi:thermometer-plus
     register_type: read
     address: 19
@@ -312,7 +330,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Air Egress Temperature"
+    name: "LG-Therma Air Egress Temperature"
     register_type: read
     address: 20
     register_count: 2
@@ -328,7 +346,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Condenser Pressure"
+    name: "LG-Therma Condenser Pressure"
     icon: mdi:gauge
     register_type: read
     address: 22
@@ -339,7 +357,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Evaporator Pressure"
+    name: "LG-Therma Evaporator Pressure"
     icon: mdi:gauge-low
     register_type: read
     address: 23
@@ -350,7 +368,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: "Compressor Speed"
+    name: "LG-Therma Compressor Speed"
     icon: mdi:car-turbocharger
     register_type: read
     address: 24
@@ -361,7 +379,7 @@ sensor:
 
   - platform: template
     id: water_delta_t
-    name: "Water ΔT"
+    name: "LG-Therma Water ΔT"
     icon: mdi:delta
     lambda: |-
       return id(outlet_temp).state - id(inlet_temp).state;
@@ -369,7 +387,7 @@ sensor:
     state_class: "measurement"
 
   - platform: template
-    name: "Power Output"
+    name: "LG-Therma Power Output"
     icon: mdi:heat-wave
     lambda: |-
       // Water has a specific heat of 4184 joule per kilogram/degree.
@@ -382,20 +400,64 @@ sensor:
     accuracy_decimals: 0
 
 select:
+  - platform: template
+    id: climate_mode
+    lambda: !lambda |-
+        return id(lg_therma_active).state
+             ? id(lg_therma_mode).state
+             : std::string("OFF");
+    update_interval: 1s
+    set_action:
+      - if:
+          condition:
+            lambda: 'return x != "OFF";'
+          then:
+            - switch.turn_on: lg_therma_active
+            - select.set:
+                id: lg_therma_mode
+                option: !lambda return x;
+          else:
+            - switch.turn_off: lg_therma_active
+    options:
+      - "OFF"
+      - "COOL"
+      - "HEAT"
+      - "AUTO"
+
+  - platform: template
+    id: climate_fan_mode
+    lambda: !lambda |-
+      return id(lg_therma_silent_mode).state
+           ? std::string("QUIET")
+           : std::string("ON");
+    update_interval: 1s
+    set_action:
+      - if:
+          condition:
+            lambda: !lambda |-
+              return x == "QUIET";
+          then:
+            - switch.turn_on: lg_therma_silent_mode
+          else:
+            - switch.turn_off: lg_therma_silent_mode
+    options:
+      - "ON"
+      - "QUIET"
+
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: Operation Mode
+    id: lg_therma_mode
     icon: mdi:sun-snowflake-variant
     address: 0
     value_type: U_WORD
     optionsmap:
-      "Cool": 0
-      "Heat": 4
-      "Auto": 5
+      "COOL": 0
+      "HEAT": 4
+      "AUTO": 5
 
   - platform: modbus_controller
     modbus_controller_id: lg
-    name: Reference
+    name: "LG-Therma Reference"
     id: reference
     icon: mdi:thermometer
     address: 1
@@ -408,7 +470,6 @@ select:
 number:
   - platform: modbus_controller
     id: true_setpoint
-    name: "Target Temperature"
     icon: mdi:thermometer
     address: 2
     min_value: 16
@@ -419,12 +480,32 @@ number:
     unit_of_measurement: "°C"
 
   - platform: modbus_controller
-    name: "Set Room Air Temperature"
+    id: ext_temperature
+    name: "LG-Therma Set Room Air Temperature"
     icon: mdi:home-thermometer
     address: 3
-    min_value: 10
+    min_value: 0
     max_value: 40
     step: 1
     multiply: 10
     device_class: "temperature"
     unit_of_measurement: "°C"
+
+climate:
+  - platform: template
+    name: "LG Therma"
+    target_temperature_id: true_setpoint
+    current_temperature_id: climate_current_temperature
+    mode_id: climate_mode
+    fan_mode_id: climate_fan_mode
+    action_id: climate_action
+    supported_modes:
+      - "OFF"
+      - "COOL"
+      - "HEAT"
+      - "AUTO"
+    supported_fan_modes:
+      - "ON"
+      - "QUIET"
+    visual:
+      temperature_step: 0.5C
